--- a/client/src/components/question/index.css
+++ b/client/src/components/question/index.css
@@ -6,6 +6,8 @@
   height: 40vmin;
   pointer-events: none;
   border-radius: 50%;
+  border: 1px solid black;
+  box-shadow: 0px 0px 25px black;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -15,7 +17,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
