--- a/client/src/components/question/index.css
+++ b/client/src/components/question/index.css
@@ -10,10 +10,14 @@
   box-shadow: 0px 0px 25px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .Record {
-    animation: Record-spin infinite 10s linear;
-  }
+.Record {
+  animation: Record-spin infinite 10s linear;
+}
+/* @media (prefers-reduced-motion: no-preference) {
+} */
+
+.question:focus-visible {
+  outline: 0;
 }
 
 .App-header {
