restructure css + Search bar
Signed-off-by: CForrest97 <craforrest97@gmail.com>

--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -1,20 +1,17 @@
 .SearchBarWrapper {
-  background-color: #376065;
-  list-style-type: none;
-  text-align: center;
-  padding: 50px;
-}
-
-.SearchBarInner {
+  width: 100%;
   border-radius: 10px;
-  background-color: white;
-  list-style-type: none;
-  text-align: center;
+  display: flex;
+  overflow: hidden;
 }
 
-@media only screen and (max-width: 768px) {
-  .SearchBarWrapper {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
+.Input {
+  background-color: white;
+  color: red;
+  width: 80%;
+}
+
+.Submit {
+  width: 20%;
+  background-color: #4d81bd;
 }
