--- a/client/src/components/Playlist/Playlist.module.css
+++ b/client/src/components/Playlist/Playlist.module.css
@@ -11,7 +11,7 @@
 }
 
 .PlaylistWrapper:hover {
-  background-color: rgb(243, 243, 243);
+  background-color: #e4ecf6;
 }
 
 .ImgContainer {
@@ -36,7 +36,7 @@
   width: calc(100% - 100px);
   text-align: left;
   padding-left: 30px;
-  color: #376065;
+  color: #47596d;
 }
 
 .col-6 img {
