--- a/client/src/elements/Button/Button.module.css
+++ b/client/src/elements/Button/Button.module.css
@@ -1,14 +1,16 @@
+.ButtonWrapper {
+  height: 100%;
+}
+
 .ButtonWrapper button {
   width: 100%;
-  /* height: 100%; */
-  position: absolute;
-  right: 0;
-  top: 0;
   height: 100%;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+  /* position: absolute;
+  right: 0;
+  top: 0; */
 
+  /* background-color: #6582a3; */
+  /* border-radius: 0 10px 10px 0; */
   background-color: transparent;
   border-color: transparent;
 }
