--- a/client/src/components/Playlist/Playlist.module.scss
+++ b/client/src/components/Playlist/Playlist.module.scss
@@ -1,17 +1,18 @@
+@import '../../assets/master';
+
 .PlaylistWrapper {
   min-height: 100px;
   width: 100%;
   font-size: small;
-  /* text-align: center; */
   padding: 10px;
-  color: black;
+  color: $dark;
   display: flex;
   align-items: center;
   outline: none;
 }
 
 .PlaylistWrapper:hover {
-  background-color: #e4ecf6;
+  background-color: lighten($accent, 40%);
 }
 
 .ImgContainer {
@@ -36,7 +37,7 @@
   width: calc(100% - 100px);
   text-align: left;
   padding-left: 30px;
-  color: #47596d;
+  color: $accent;
 }
 
 .col-6 img {
