--- a/client/src/containers/Game/Game.scss
+++ b/client/src/containers/Game/Game.scss
@@ -1,3 +1,5 @@
+@import '../../assets/master';
+
 .App {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -5,7 +7,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
+  background: rgb(245, 245, 245);
   /* background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%); */
+}
+
+.Game {
+  width: 768px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
 }
 
 .App-logo {
@@ -23,19 +35,19 @@
   /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: #376065;
+  color: $accent;
 }
 .App-header h1 {
-  color: #376065;
-  /* font-size: 5rem; */
+  color: $accent;
+  font-size: 5rem;
 }
 
 .App-link {
-  color: #61dafb;
+  color: red;
 }
 
 @keyframes App-logo-spin {
@@ -44,5 +56,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .Game {
+    width: 100%;
   }
 }
