--- a/client/src/containers/Game/Round/Round.module.scss
+++ b/client/src/containers/Game/Round/Round.module.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/master';
+
 .Question:focus-visible {
   outline: 0;
 }
@@ -15,7 +17,7 @@
 
 .Question h1 {
   font-size: xx-large;
-  color: #376065;
+  color: $accent;
 }
 
 @media only screen and (max-width: 600px) {
