--- a/client/src/containers/SearchPlaylists/SearchPlaylists.module.scss
+++ b/client/src/containers/SearchPlaylists/SearchPlaylists.module.scss
@@ -1,3 +1,5 @@
+@import '../../assets/master';
+
 .SearchWrapper {
   cursor: pointer;
   font-size: larger;
@@ -17,7 +19,7 @@
 }
 
 .QuickPlaylists {
-  color: #47596d;
+  color: $accent;
   padding: 15px;
 }
 
@@ -28,7 +30,7 @@
 }
 
 .SearchW {
-  background-color: #47596d;
+  background-color: $accent;
   list-style-type: none;
   text-align: center;
   padding: 50px 30px 50px 30px;
