--- a/client/src/elements/ButtonWhite/Button.module.scss
+++ b/client/src/elements/ButtonWhite/Button.module.scss
@@ -1,14 +1,15 @@
+@import '../../assets/master';
+
 .ButtonWrapper button {
   /* padding: 5px; */
   padding-left: 20px;
   padding-right: 20px;
   margin: auto;
-  /* height: 100%; */
   border-radius: 25px;
 
-  background-color: white;
+  background-color: $light;
   border-color: transparent;
-  color: #376065;
+  color: $accent;
 
   margin: auto;
 }
