simplify scss imports and improve round scss
Signed-off-by: CForrest97 <craforrest97@gmail.com>

--- a/client/src/assets/_master.scss
+++ b/client/src/assets/_master.scss
@@ -3,3 +3,15 @@ $lightAccent: #ea9775;
 $accent: #586e8b;
 $darkAccent: #334762;
 $dark: #1d131d;
+
+$background: white;
+$background2: rgb(245, 245, 245);
+
+// $light: #2c2c2c;
+// $lightAccent: #ea9775;
+// $accent: #b1d3ff;
+// $darkAccent: #334762;
+// $dark: #200520;
+
+// $background: black;
+// $background2: rgb(26, 26, 26);
