--- a/client/src/containers/Game/Game.scss
+++ b/client/src/containers/Game/Game.scss
@@ -1,4 +1,4 @@
-@import '../../assets/master';
+@import 'assets/master';
 
 .App {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,17 +7,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background: rgb(245, 245, 245);
   /* background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%); */
 }
 
 .Game {
   width: 768px;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: $background;
 }
 
 .App-logo {
@@ -32,17 +31,15 @@
 }
 
 .App-header {
-  /* background-color: #282c34; */
+  background-color: $background2;
   min-height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: $accent;
 }
 .App-header h1 {
-  color: $accent;
   font-size: 5rem;
 }
 
