--- a/client/src/containers/SearchPlaylists/Game.scss
+++ b/client/src/containers/SearchPlaylists/Game.scss
@@ -1,4 +1,4 @@
-@import '../../assets/master';
+@import 'assets/master';
 
 .App {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,25 +15,14 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    /* animation: App-logo-spin infinite 5s linear; */
-  }
-}
-
 .App-header {
-  /* background-color: #282c34; */
+  background-color: $background2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: $accent;
-}
-.App-header h1 {
-  color: $accent;
-  /* font-size: 5rem; */
 }
 
 .App-link {
