add Scoring for game
Signed-off-by: CForrest97 <craforrest97@gmail.com>

--- a/client/src/assets/_master.scss
+++ b/client/src/assets/_master.scss
@@ -13,5 +13,5 @@ $background2: rgb(245, 245, 245);
 // $darkAccent: #334762;
 // $dark: #200520;
 
-// $background: black;
+// $background: #121212;
 // $background2: rgb(26, 26, 26);
