--- a/client/src/components/Playlist/Playlist.module.scss
+++ b/client/src/components/Playlist/Playlist.module.scss
@@ -11,7 +11,7 @@
 }
 
 .PlaylistWrapper:hover {
-  background-color: lighten($background2, 10%);
+  background-color: lighten($accent, 50%);
 }
 
 .ImgContainer {
