--- a/client/src/containers/Game/Round/Round.module.scss
+++ b/client/src/containers/Game/Round/Round.module.scss
@@ -39,7 +39,7 @@
 .QuestionWrapper {
   background-color: $accent;
   width: 100%;
-  height: 150px;
+  height: 130px;
   display: flex;
 }
 
@@ -54,7 +54,7 @@
 .AnswersWrapper {
   padding-bottom: 20px;
   display: flex;
-  height: calc(100vh - 150px - (100vh - 520px));
+  height: calc(520px - 150px);
   align-items: center;
   justify-content: center;
 }
@@ -70,4 +70,10 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.ScoreboardWrapper {
+  height: 20px;
+  width: 100%;
+  background-color: green;
 }
